--- a/config.toml
+++ b/config.toml
@@ -66,8 +66,8 @@ googleAnalytics = ""
 
     # postpended links
     [[menu.postpend]]
-      url = "http://www.activlingua.cz"
-      name = "ActivLingua"
+      url = "http://www.katkakutnerova.cz"
+      name = "Katka Kutnerová"
       weight = 10
 
 
